Bug 1773381 - Axis lock should not be considered in CanScroll(). r=botond a=pascalc

The axis lock should not be considered when determining if an axis can
scroll in a given direction.

Differential Revision: https://phabricator.services.mozilla.com/D148970